--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <header class="header">
+      <div  class="container header-container">
       <nav class="header-nav">
         <a class="header-logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
         <ul class="header-menu-list">
@@ -36,18 +37,22 @@
           <li class="header-ads-item"><a class="header-ads-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
+    </div>
     </header>
 
     <main class="main">
 
-      <section class="hero">
+      <section class="section hero">
+        <div class="container hero-container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
         <button type="button" class="hero-btn">Order Service</button>
+      </div>
       </section>
 
 
-      <section class="quality">
+      <section class="section quality">
+        <div class="container quality-container">
         <h2 hidden>Quality</h2>
 
         <ul class="quality-list">
@@ -84,10 +89,12 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
 
-      <section class="team">
+      <section class="section team">
+        <div class="container team-container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
@@ -97,8 +104,10 @@
               width="264"
               height="260"
             />
+            <div class="team-title-container">
             <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-item-title">Product Designer</p>
+          </div>
           </li>
           <li class="team-item">
             <img class="team-img"
@@ -107,8 +116,10 @@
               width="264"
               height="260"
             />
+            <div class="team-title-container">
             <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-item-title">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img"
@@ -117,6 +128,7 @@
               width="264"
               height="260"
             />
+            <div class="team-title-container">
             <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="team-item-title">Marketing</p>
           </li>
@@ -127,13 +139,17 @@
               width="264"
               height="260"
             />
+            <div class="team-title-container">
             <h3 class="team-subtitle">Daniel Wilson</h3>
             <p class="team-item-title">UI Designer</p>
+          </div>
           </li>
         </ul>
+      </div>
       </section>
 
-      <section class="portfolio">
+      <section class="section portfolio">
+        <div class="container portfolio-container">
         <h2 class="portfolio-title">Our Portfolio</h2>
 
         <ul class="portfolio-list">
@@ -144,8 +160,10 @@
               width="360"
               height="300"
             />
+            <div class="portfolio-titles">
             <h3 class="portfolio-subtitle">Banking App</h3>
             <p class="portfolio-item-title">App</p>
+          </div>
           </li>
 
           <li class="portfolio-item">
@@ -155,8 +173,10 @@
               width="360"
               height="300"
             />
+            <div class="portfolio-titles">
             <h3 class="portfolio-subtitle">Cashless Payment</h3>
             <p class="portfolio-item-title">Marketing</p>
+          </div>
           </li>
 
           <li class="portfolio-item">
@@ -166,8 +186,10 @@
               width="360"
               height="300"
             />
+            <div class="portfolio-titles">
             <h3 class="portfolio-subtitle">Meditation App</h3>
             <p class="portfolio-item-title">App</p>
+          </div>
           </li>
 
           <li class="portfolio-item">
@@ -177,8 +199,10 @@
               width="360"
               height="300"
             />
+            <div class="portfolio-titles"></div>
             <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-item-title">Marketing</p>
+          </div>
           </li>
 
           <li class="portfolio-item">
@@ -188,8 +212,10 @@
               width="360"
               height="300"
             />
+            <div class="portfolio-titles">
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-item-title">Design</p>
+          </div>
           </li>
 
           <li class="portfolio-item">
@@ -199,18 +225,24 @@
               width="360"
               height="300"
             />
+            <div class="portfolio-titles"></div>
             <h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-item-title">Marketing</p>
+          </div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
+
     <footer class="footer">
+      <div class="container footer-container">
       <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
       <p class="footer-item">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
