--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-titles"></div>
+            <div class="portfolio-titles">
             <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-item-title">Marketing</p>
           </div>
@@ -225,7 +225,7 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-titles"></div>
+            <div class="portfolio-titles">
             <h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-item-title">Marketing</p>
           </div>
