--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <section class="section quality">
         <div class="container quality-container">
-        <h2 hidden>Quality</h2>
+        <h2 class="visually-hidden">Quality</h2>
 
         <ul class="quality-list">
 
