--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <div class="team-title-container">
             <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="team-item-title">Marketing</p>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img"
